# wikiapi

./: LICENSE  README.md  pyproject.toml
src/wikiapi/: console.py
